🔒 Remove actual API keys from env.example
- Replace real API keys with placeholder values
- Keep template structure for easy setup
- Ensure no sensitive data in public repository

--- a/env.example
+++ b/env.example
@@ -3,8 +3,8 @@ ELASTIC_ENDPOINT=https://your-elastic-endpoint.kb.us-east-1.aws.elastic.cloud
 ELASTIC_API_KEY=your-elastic-api-key-here
 
 # Demo Configuration (for testing)
-# ELASTIC_ENDPOINT=https://otel-demo-a5630c.kb.us-east-1.aws.elastic.cloud
-# ELASTIC_API_KEY=ZktNNGJaa0JxTVdyT0R5UlpCR2w6bzNtZTV5eVRicVJlV21hRmN0TVBvZw==
+# ELASTIC_ENDPOINT=https://demo-endpoint.kb.us-east-1.aws.elastic.cloud
+# ELASTIC_API_KEY=your-demo-api-key-here
 
 # Optional: Logging Configuration
 LOG_LEVEL=INFO
