🤖 Update to Elastic Agent Builder integration
- Updated all documentation to focus on Agent Builder instead of local MCP server
- Created setup-cursor-agent-builder.sh for automated Cursor MCP configuration
- Added connect-to-agent-builder.sh and query-application-health.sh scripts
- Updated all setup scripts to use Agent Builder APIs
- Removed obsolete MCP server documentation (USAGE-GUIDE.md, MCP-SERVER-GUIDE.md)
- Updated configuration files to use Agent Builder endpoints
- Maintained environment variable security practices
- All scripts now connect directly to Elastic Agent Builder

--- a/cursor-mcp-config.json
+++ b/cursor-mcp-config.json
@@ -1,9 +1,14 @@
 {
   "mcpServers": {
-    "elastic-otel": {
-      "command": "/opt/o11y-mcp-server/venv/bin/python",
+    "elastic-agent-builder": {
+      "command": "curl",
       "args": [
-        "/opt/o11y-mcp-server/elastic-otel-mcp-server.py"
+        "-X", "POST",
+        "-H", "Authorization: ApiKey ${ELASTIC_API_KEY}",
+        "-H", "kbn-xsrf: true",
+        "-H", "Content-Type: application/json",
+        "-d", "{\"tool_name\": \"platform.core.search\", \"parameters\": {\"query\": \"application health\", \"index\": \"metrics-*\"}}",
+        "${ELASTIC_ENDPOINT}/api/agent_builder/tools"
       ],
       "env": {
         "ELASTIC_ENDPOINT": "${ELASTIC_ENDPOINT}",
